Dependency update to support java 10+